objects/DandB_ContactAddress__c.object
<CustomObject>
    <fields>
        <fullName>DandB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DandB</label>
        <referenceTo>DandB__c</referenceTo>
        <relationshipLabel>DandB_ContactAddress</relationshipLabel>
        <relationshipName>DandB_ContactAddress</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastRecordedDay__c</fullName>
        <label>LastRecordedDay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRecordedMonth__c</fullName>
        <label>LastRecordedMonth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastRecordedYear__c</fullName>
        <label>LastRecordedYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingName2__c</fullName>
        <label>buildingName2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingName__c</fullName>
        <label>buildingName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isCurrent__c</fullName>
        <label>isCurrent</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMailing__c</fullName>
        <label>isMailing</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPriorAddress__c</fullName>
        <label>isPriorAddress</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordedMonth__c</fullName>
        <label>recordedMonth</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>recordedYear__c</fullName>
        <label>recordedYear</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetNo__c</fullName>
        <label>streetNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetType__c</fullName>
        <label>streetType</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitNo__c</fullName>
        <label>unitNo</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>DandB_ContactAddress</label>
    <nameField>
        <label>DandBContact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DandB_ContactAddress</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>